2014-08-03  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Move th_brkpos_hints() to common thbrk code.

	This is a preparation for alternative word break algorithms.
	
	* src/thbrk/brk-maximal.c, src/thbrk/thbrk-private.h:
	  - Move declaration of th_brkpos_hints() to thbrk-private.h.
	* src/thbrk/brk-maximal.c:
	  - Include thbrk-private.h to get th_brkpos_hints() declaration.
	* src/thbrk/brk-maximal.c, src/thbrk/thbrk.c:
	  - Move implementation of th_brkpos_hints() to thbrk.c.

2014-07-31  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* data/tdict-city.txt:
	* data/tdict-common.txt:
	* data/tdict-district.txt:
	* data/tdict-lang-ethnic.txt: Add words.

2014-06-30  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* data/tdict-common.txt:
	* data/tdict-district.txt:
	* data/tdict-geo.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt: Add words.

	* data/tdict-std.txt:
	  - Remove rare word 'จอแส' which causes wrong segmentation for 'จอแสดงผล'
	    as 'จอแส|ดง|ผล'.

2014-03-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-city.txt:
	* data/tdict-common.txt:
	* data/tdict-district.txt:
	* data/tdict-ict.txt:
	* data/tdict-proper.txt:
	* data/tdict-spell.txt: Add words.

	* data/tdict-common.txt:
	  - Remove 'บ๊วย' which duplicates an entry in tdict-std.txt.
	* data/tdict-proper.txt, data/tdict-district.txt:
	  - Move 'กรือเซะ' from tdict-proper.txt to tdict-district.txt.
	* data/tdict-proper.txt, data/tdict-geo.txt:
	  - Move 'แอตแลนติส' from tdict-proper.txt to tdict-geo.txt.

2014-01-11  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix warning in test suite.

	* tests/test_thbrk.c (main):
	  - Fix compiler warning on unused return value from fgets().
	    Caught by debian package building with test suites enabled.

2013-12-21  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std-compound.txt, data/tdict-std.txt:
	  - Move 'ชุติมา' from -std-compound to -std.
